Caminhos do site ajustado

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -36,7 +36,7 @@
             <a class="nav-selected" href="./paginaPrincipal.html">
                 Página Inicial
             </a>
-            <a onclick="goToComentarios(); openSidebar();">
+            <a onclick="goToComentarios()">
                 Comentários
             </a>
             <a href="./cadastroPersona.html">
@@ -47,7 +47,7 @@
                     <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png"
                         alt="Imagem de Notificações">
                 </div>
-                <a onclick="goToAlertas();">
+                <a onclick="goToAlertas()">
                     Notificações
                 </a>
                 <div class="notification-dropdown" onmouseleave="hideNotifications()">
@@ -122,19 +122,19 @@
                 <img width="40%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
             </div>
             <div class="side-bar-links-container">
-                <a onclick="goToPaginaInicial(); openSidebar();">
+                <a onclick="goToPaginaInicial()">
                     Página Inicial
                 </a>
-                <a onclick="goToComentarios(); openSidebar();">
+                <a onclick="goToComentarios()">
                     Comentários
                 </a>
-                <a onclick="goToCadastrar(); openSidebar();">
+                <a onclick="goToCadastrar()">
                     Cadastrar
                 </a>
-                <a onclick="goToPerfil(); openSidebar();">
+                <a onclick="goToPerfil()">
                     Perfil
                 </a>
-                <a onclick="goToSair(); openSidebar();">
+                <a onclick="goToSair()">
                     Sair
                 </a>
             </div>
@@ -151,7 +151,7 @@
         <div class="filtro">
 
             <div class="filtroSelecionado">
-                <h1>(MÊS) (ANO) (MUNICIPIO PRINCIAL)</h1>
+                <h1><a id="mesFeedback">Janeiro</a> de <a id="anoFeedback">2024</a>, <a id="municipioFeedback">São Paulo</a></h1>
             </div>
 
             <!-- AO CLICAR VAI ABRIR UMA DIV NO CENTRO COM OS GRÁFICOS E O FUNDO FICARÁ DESFOCADO -->
@@ -187,12 +187,12 @@
                         </div>
                         <div class="contem-escolhe-filtro">
                             <select name="" class="select-opt" id="municipioPrincipal">
-                                <option value="#"></option>
-                                <option value="">São Paulo</option>
-                                <option value="">Santo Andre</option>
-                                <option value="">São Caetano</option>
-                                <option value="">Campinas</option>
-                                <option value="">Piracicaba</option>
+                                <option></option>
+                                <option value="São Paulo">São Paulo</option>
+                                <option value="Santo Andre">Santo Andre</option>
+                                <option value="São Caetano">São Caetano</option>
+                                <option value="Campinas">Campinas</option>
+                                <option value="Piracicaba">Piracicaba</option>
                             </select>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                         </div>
                         <div class="contem-escolhe-filtro">
                             <select name="" class="select-opt" id="regiaoDesejada">
-                                <option value="#"></option>
+                                <option></option>
                                 <option value="Sul">Sul</option>
                                 <option value="">Centro-Oeste</option>
                                 <option value="">Norte</option>
@@ -217,12 +217,12 @@
                         </div>
                         <div class="contem-escolhe-filtro">
                             <select name="" class="select-opt" id="anoDesejado">
-                                <option value="#"></option>
-                                <option value="">2024</option>
-                                <option value="">2023</option>
-                                <option value="">2022</option>
-                                <option value="">2021</option>
-                                <option value="">2020</option>
+                                <option></option>
+                                <option value="2024">2024</option>
+                                <option value="2023">2023</option>
+                                <option value="2022">2022</option>
+                                <option value="2021">2021</option>
+                                <option value="2020">2020</option>
                             </select>
                         </div>
                     </div>
@@ -232,19 +232,19 @@
                         </div>
                         <div class="contem-escolhe-filtro">
                             <select name="" class="select-opt" id="mesDesejado">
-                                <option value="#"></option>
-                                <option value="">Janeiro</option>
-                                <option value="">Fevereiro</option>
-                                <option value="">Março</option>
-                                <option value="">Abril</option>
-                                <option value="">Maio</option>
-                                <option value="">Junho</option>
-                                <option value="">Julho</option>
-                                <option value="">Agosto</option>
-                                <option value="">Setembro</option>
-                                <option value="">Outubro</option>
-                                <option value="">Novembro</option>
-                                <option value="">Dezembro</option>
+                                <option></option>
+                                <option value="Janeiro">Janeiro</option>
+                                <option value="Fevereiro">Fevereiro</option>
+                                <option value="Março">Março</option>
+                                <option value="Abril">Abril</option>
+                                <option value="Maio">Maio</option>
+                                <option value="Junho">Junho</option>
+                                <option value="Julho">Julho</option>
+                                <option value="Agosto">Agosto</option>
+                                <option value="Setembro">Setembro</option>
+                                <option value="Outubro">Outubro</option>
+                                <option value="Novembro">Novembro</option>
+                                <option value="Dezembro">Dezembro</option>
                             </select>
                         </div>
                     </div>
@@ -461,3 +461,4 @@
 <script src="./js/script.js"></script>
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/feedbackDash.js"></script>
+<script src="./js/navegarSite.js"></script>
