--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -38,7 +38,7 @@
             <a class="nav-selected" href="./paginaPrincipal.html">
                 Página Inicial
             </a>
-            <a onclick="goToComentarios(); openSidebar();">
+            <a onclick="goToComentarios()">
                 Comentários
             </a>
             <a href="./cadastroPersona.html">
@@ -128,19 +128,19 @@
                 <img width="40%" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
             </div>
             <div class="side-bar-links-container">
-                <a onclick="goToPaginaInicial(); openSidebar();">
+                <a onclick="goToPaginaInicial()">
                     Página Inicial
                 </a>
-                <a onclick="goToComentarios(); openSidebar();">
+                <a onclick="goToComentarios()">
                     Comentários
                 </a>
-                <a onclick="goToCadastrar(); openSidebar();">
+                <a onclick="goToCadastrar()">
                     Cadastrar
                 </a>
-                <a onclick="goToPerfil(); openSidebar();">
+                <a onclick="goToPerfil()">
                     Perfil
                 </a>
-                <a onclick="goToSair(); openSidebar();">
+                <a onclick="goToSair()">
                     Sair
                 </a>
                 <div onmouseenter="showUserOptions()" class="user-container" style="display: none;">
@@ -421,3 +421,4 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
+<script src="./js/navegarSite.js"></script>
