--- a/site/public/personal.html
+++ b/site/public/personal.html
@@ -72,7 +72,7 @@
             <a href="./cadastroPersona.html">
                 Comentários
             </a>
-            <a onclick="goToCadastrar(); openSidebar();">
+            <a onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
@@ -152,19 +152,19 @@
                 <img id="id-logo-nav-bar" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
             </div>
             <div class="side-bar-links-container">
-                <a onclick="goToPaginaInicial(); openSidebar();">
+                <a onclick="goToPaginaInicial()">
                     Página Inicial
                 </a>
-                <a onclick="goToComentarios(); openSidebar();">
+                <a onclick="goToComentarios()">
                     Comentários
                 </a>
-                <a onclick="goToCadastrar(); openSidebar();">
+                <a onclick="goToCadastrar()">
                     Cadastrar
                 </a>
-                <a onclick="goToPerfil(); openSidebar();">
+                <a onclick="goToPerfil()">
                     Perfil
                 </a>
-                <a onclick="goToSair(); openSidebar();">
+                <a onclick="goToSair()">
                     Sair
                 </a>
             </div>
@@ -276,3 +276,4 @@
 <script src="./js/script.js"></script>
 <script src="./js/personal.js"></script>
 <script src="./js/index.js"></script>
+<script src="./js/navegarSite.js"></script>
