--- a/site/public/cadastroPersona.html
+++ b/site/public/cadastroPersona.html
@@ -37,10 +37,10 @@
             <a href="./paginaPrincipal.html">
                 Página Inicial
             </a>
-            <a onclick="goToComentarios(); openSidebar();">
+            <a onclick="goToComentarios()">
                 Comentários
             </a>
-            <a class="nav-selected"  onclick="goToCadastrar(); openSidebar();">
+            <a class="nav-selected"  onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
@@ -122,19 +122,19 @@
                 <img width="40%" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
             </div>
             <div class="side-bar-links-container">
-                <a onclick="goToPaginaInicial(); openSidebar();">
+                <a onclick="goToPaginaInicial()">
                     Página Inicial
                 </a>
-                <a onclick="goToComentarios(); openSidebar();">
+                <a onclick="goToComentarios()">
                     Comentários
                 </a>
-                <a onclick="goToCadastrar(); openSidebar();">
+                <a onclick="goToCadastrar()">
                     Cadastrar
                 </a>
-                <a onclick="goToPerfil(); openSidebar();">
+                <a onclick="goToPerfil()">
                     Perfil
                 </a>
-                <a onclick="goToSair(); openSidebar();">
+                <a onclick="goToSair()">
                     Sair
                 </a>
             </div>
@@ -233,3 +233,4 @@
 
 <script src="./js/index.js"></script>
 <script src="./js/script.js"></script>
+<script src="./js/navegarSite.js"></script>
