correcao da nav de cadastro de novos funcionarios

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -35,10 +35,10 @@
 
         <div class="nav-bar-links-container" style="display: none;">
 
-            <a class="nav-selected" href="./paginaPrincipal.html">
+            <a  href="./paginaPrincipal.html">
                 Página Inicial
             </a>
-            <a onclick="goToComentarios()">
+            <a class="nav-selected" onclick="goToComentarios()">
                 Comentários
             </a>
             <a href="./cadastroPersona.html">
@@ -202,7 +202,7 @@
                 </div>
 
                 <div class="text-filtro">
-                    <h1>Filtro</h1>
+                    <h1>Filtros</h1>
                 </div>
 
             </div>
