--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -201,7 +201,7 @@
                 </div>
 
                 <div class="text-filtro">
-                    <h1>Filtro</h1>
+                    <h1>Filtros</h1>
                 </div>
 
             </div>
