Sei la, já me perdi

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/feedbackDash.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -392,7 +393,7 @@
 
             <!-- QUERO ADICIONAR UM BOTÃO PRA ESCONDER A DIV DAS DASHBOARDS-->
 
-            <div class="primeira-dashboard">
+            <div class="primeira-dashboardF">
                 <canvas id="myChartXX"></canvas>
             </div>
 
