--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -79,8 +79,8 @@
         </div>
         <div onclick="showUserOptions()" class="user-container" style="display: none;">
             <div class="user-infos">
-                <img id="id-img-user options" width="40%" src="./assets/img-user.png" alt="Imagem de Usuário">
-                <span>Dono de tudo</span>
+                <img id="id-img-user options" width="50%" src="./assets/img-user.png" alt="Imagem de Usuário">
+                <span>Rosim</span>
             </div>
 
             <div class="user-dropdown-options">
@@ -99,7 +99,7 @@
                         </svg>
                     </span>
                 </div>
-                <button id="disconectButton">Desconectar</button>
+                <button id="disconectButton" onclick="disconnectAccount()">Desconectar</button>
             </div>
         </div>
         <!-- FIM NAV BAR -->
