correcao da responsividade do botao de notificacao

--- a/site/public/personal.html
+++ b/site/public/personal.html
@@ -52,7 +52,7 @@
         </button>
     </div>
 
-    <div class="mobile-nav-bar" id="mobile_nav_bar" style="display: flex;">
+    <div class="mobile-nav-bar" id="mobile_nav_bar">
 
         <div class="logo-nav-container" onclick="goToHome()">
             <img id="id-logo-nav-bar" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
@@ -109,8 +109,8 @@
         </div>
         <div onclick="showUserOptions()" class="user-container" style="display: none;">
             <div class="user-infos">
-                <img id="id-img-user options" width="40%" src="./assets/img-user.png" alt="Imagem de Usuário">
-                <span>Dono de tudo</span>
+                <img id="id-img-user options" width="50%" src="./assets/img-user.png" alt="Imagem de Usuário">
+                <span>Rosim</span>
             </div>
             <div class="user-dropdown-options">
                 <button onclick="goToPersonal()">Dados Pessoais</button>
@@ -244,7 +244,7 @@
                         </svg>
                     </div>
                     <select disabled class="disabled" id="selectCargoUsuario">
-                        <option value="donoDeTudo">Dono da porra toda</option>
+                        <option value="donoDeTudo">Gerente</option>
                     </select>
                 </div>
                 <div class="user-names-box">
