--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -104,7 +104,7 @@
         </div>
         <!-- FIM NAV BAR -->
 
-        <div class="persona-switcher" style="position: fixed; bottom: 20px; right: 20px;">
+        <div class="persona-switcher">
             <button onclick="switchPersona('saude')">Modo Saúde</button>
             <button onclick="switchPersona('ambiental')">Modo Ambiental</button>
         </div>
