--- a/site/public/cadastroPersona.html
+++ b/site/public/cadastroPersona.html
@@ -243,7 +243,7 @@
                     </div>
 
                     <div class="contem-placeholder-dados-empresa-checkbox">
-                        <input type="checkbox">
+                        <input id="inputGerente" type="checkbox">
                         <h3>O usuário deve ter acesso de gerente.</h3>
                     </div>
 
