--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -105,11 +105,11 @@
         </div>
         <!-- FIM NAV BAR -->
 
-        <div class="persona-switcher" style="position: fixed; bottom: 20px; right: 20px;">
+      <!--   <div class="persona-switcher" style="position: fixed; bottom: 20px; right: 20px;">
             <button onclick="switchPersona('saude')">Modo Saúde</button>
             <button onclick="switchPersona('ambiental')">Modo Ambiental</button>
         </div>
-
+ -->
         <button id="id-button-nav-bar" onclick="openSidebar()">
             <svg xmlns="http://www.w3.org/2000/svg" width="40%" height="40%" fill="currentColor"
                 class="bi bi-layout-text-window-reverse" viewBox="0 0 16 16">
@@ -474,11 +474,45 @@
             <!-- EXIBIR COMENTÁRIOS -->
 
             <div class="contem-comentarios">
+               <div class="comentario">
                 <div class="cabecalho">
-                    <div class="cabecalho-municipio"> <a href="">Munícipio:</a> <a href="">texto</a></div>
-                    <div class="cabecalho-poluente"><a href="">Poluidor:</a> <a href="">texto</a></div>
+                    <div class="cabecalho-municipio">
+                       <p>Munícipio:</a>
+                       <p>São Caetano do Sul</a>
+                    </div>
+                    <div class="cabecalho-poluente">
+                       <p>Poluidor:</a>
+                       <p>CO2</a>
+                    </div>
                 </div>
                 <div class="descricao"><a>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</a></div>
+               </div>
+               <div class="comentario">
+                <div class="cabecalho">
+                    <div class="cabecalho-municipio">
+                       <p>Munícipio:</a>
+                       <p>São Caetano do Sul</a>
+                    </div>
+                    <div class="cabecalho-poluente">
+                       <p>Poluidor:</a>
+                       <p>CO2</a>
+                    </div>
+                </div>
+                <div class="descricao"><a>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</a></div>
+               </div>
+               <div class="comentario">
+                <div class="cabecalho">
+                    <div class="cabecalho-municipio">
+                       <p>Munícipio:</a>
+                       <p>São Caetano do Sul</a>
+                    </div>
+                    <div class="cabecalho-poluente">
+                       <p>Poluidor:</a>
+                       <p>CO2</a>
+                    </div>
+                </div>
+                <div class="descricao"><a>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</a></div>
+               </div>
             </div>
 
         </div>
