Tela de Notificação

--- a/site/public/cadastroPersona.html
+++ b/site/public/cadastroPersona.html
@@ -235,3 +235,8 @@
 
 <script src="./js/index.js"></script>
 <script src="./js/script.js"></script>
+<script>
+    function goToAlertas(){
+        window.location.href = "./notificacoes.html"
+    }
+</script>
