--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -317,3 +317,8 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
+<script>
+    function goToAlertas(){
+        window.location.href = "./notificacoes.html"
+    }
+</script>
