Tela de Notificação

--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -49,7 +49,7 @@
                     <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png"
                         alt="Imagem de Notificações">
                 </div>
-                <a>
+                <a href="./notificacoes.html">
                     Notificações
                 </a>
                 <div class="notification-dropdown">
@@ -416,8 +416,3 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
-<script>
-    function goToAlertas(){
-        window.location.href = "./notificacoes.html"
-    }
-</script>
