--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -25,7 +25,7 @@
             <img id="id-logo-nav-bar" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
         </div>
 
-        <div onclick="goToNotification()" class="contem-alerta">
+        <div onclick="goToNotification()" class="contem-alerta2" style="display: none;">
             <div class="img-nav-alerta2">
                 <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
             </div>
