--- a/site/public/personal.html
+++ b/site/public/personal.html
@@ -58,8 +58,11 @@
             <img id="id-logo-nav-bar" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
         </div>
 
-        <div class="img-nav-alerta" onclick="goToNotification()">
-            <img id="id-img-nav-alerta" width="40%" height="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
+        
+        <div onclick="goToNotification()" class="contem-alerta2" style="display: none;">
+            <div class="img-nav-alerta2">
+                <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
+            </div>
         </div>
 
         <!-- NAV BAR DESKTOP -->
