correcao da sidebar

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -127,7 +127,7 @@
         <div id="sideBar" class="side-bar">
 
             <div class="img-side-bar" onclick="goToHome()">
-                <img width="40%" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
+                <img width="100%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
             </div>
             <div class="side-bar-links-container">
                 <a onclick="goToPaginaInicial()">
