--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -120,7 +120,7 @@
         <div id="sideBar" class="side-bar">
 
             <div class="img-side-bar" onclick="goToHome()">
-                <img width="40%" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
+                <img width="100%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
             </div>
             <div class="side-bar-links-container">
                 <a onclick="goToPaginaInicial()">
@@ -212,7 +212,7 @@
                 <div class="escolher-filtro">
 
                     <div class="btn-sair" onclick="fecharFiltro()">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                             class="bi bi-x-lg" viewBox="0 0 16 16">
                             <path
                                 d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
