--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -418,17 +418,17 @@
             <div class="filtro">
 
                 <!-- AO CLICAR VAI ABRIR UMA DIV NO CENTRO COM OS GRÁFICOS E O FUNDO FICARÁ DESFOCADO -->
-                <div class="filtro-aplicado" style="display: flex;" id="id_filtro_aplicado" onclick="abrirFiltro()">
+<!--                 <div class="filtro-aplicado" style="display: flex;" id="id_filtro_aplicado" onclick="abrirFiltro()">
 
                     <div class="img-filtro">
-                        <img id="id-img-filtro" width="100%" src="./assets/img-filtro.png" alt="Imagem do Filtro">
+                        <img id="id-img-filtro" width="80%" src="./assets/img-filtro.png" alt="Imagem do Filtro">
                     </div>
 
                     <div class="text-filtro">
                         <h1>Filtro</h1>
                     </div>
 
-                </div>
+                </div> -->
                 <!-- TALVEZ REMOVA -->
                 <div class="fundo-escolher-filtro" style="display: none;" id="id_fundo_escolher_filtro">
 
@@ -476,43 +476,47 @@
 
             <div class="contem-comentarios">
                <div class="comentario">
-                <div class="cabecalho">
-                    <div class="cabecalho-municipio">
-                       <p>Munícipio:</a>
-                       <p>São Caetano do Sul</a>
+                    <div class="cabecalho">
+                        <div class="cabecalho-municipio">
+                            <p>Munícipio:</p>
+                            <p>São Caetano do Sul</p>
+                        </div>
+                        <div class="cabecalho-poluente">
+                            <p>Poluidor:</p>
+                            <p>CO2</p>
+                        </div>
                     </div>
-                    <div class="cabecalho-poluente">
-                       <p>Poluidor:</a>
-                       <p>CO2</a>
+                    <div class="descricao">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.
+                        </p>
                     </div>
                 </div>
-                <div class="descricao"><a>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</a></div>
+               <div class="comentario">
+                <div class="cabecalho">
+                    <div class="cabecalho-municipio">
+                       <p>Munícipio:</p>
+                       <p>São Caetano do Sul</p>
+                    </div>
+                    <div class="cabecalho-poluente">
+                       <p>Poluidor:</p>
+                       <p>CO2</p>
+                    </div>
+                </div>
+                <div class="descricao"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</p></div>
                </div>
                <div class="comentario">
                 <div class="cabecalho">
                     <div class="cabecalho-municipio">
-                       <p>Munícipio:</a>
-                       <p>São Caetano do Sul</a>
+                       <p>Munícipio:</p>
+                       <p>São Caetano do Sul</p>
                     </div>
                     <div class="cabecalho-poluente">
-                       <p>Poluidor:</a>
-                       <p>CO2</a>
+                       <p>Poluidor:</p>
+                       <p>CO2</p>
                     </div>
                 </div>
-                <div class="descricao"><a>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</a></div>
-               </div>
-               <div class="comentario">
-                <div class="cabecalho">
-                    <div class="cabecalho-municipio">
-                       <p>Munícipio:</a>
-                       <p>São Caetano do Sul</a>
-                    </div>
-                    <div class="cabecalho-poluente">
-                       <p>Poluidor:</a>
-                       <p>CO2</a>
-                    </div>
-                </div>
-                <div class="descricao"><a>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</a></div>
+                <div class="descricao"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam, tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione odio est quis unde veritatis cumque.</p></div>
                </div>
             </div>
 
