--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -315,7 +315,7 @@
 
                 </div>
 
-                <div class="segunda-kpi">
+                <div class="segunda-kpi" id="m-segunda-kpi">
 
                     <div class="titulo-kpi">
                         <h1 id="m-kpi2-title">Munícipio com maior Indice de Doenças Respiratórias</h1>
@@ -356,7 +356,7 @@
 
                 </div>
 
-                <div class="segunda-kpi">
+                <div class="segunda-kpi" id="segunda-kpi">
 
                     <div class="titulo-kpi">
                         <h1 id='kpi2-title'> Maior Indíce Doenças Respiratórias</h1>
