correaco das notificaoes e outras coisas

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -59,19 +59,19 @@
                         <div class="notification-container">
                             <span>27/02/2025 13:26</span>
                             <button>
-                                Acontecimento muito louco doido explodiu tudo
+                                Base de dados atualizadas
                             </button>
                         </div>
                         <div class="notification-container">
                             <span>27/02/2025 13:26</span>
                             <button>
-                                Acontecimento muito louco doido explodiu tudo
+                                Base de dados atualizadas
                             </button>
                         </div>
                         <div class="notification-container">
                             <span>27/02/2025 13:26</span>
                             <button>
-                                Acontecimento muito louco doido explodiu tudo
+                                Base de dados atualizadas
                             </button>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
 
             <div class="user-dropdown-options">
                 <button onclick="goToPersonal()">Dados Pessoais</button>
-                <button>Filtros Salvos</button>
+               <!--  <button>Filtros Salvos</button> -->
                 <div class="theme-switch-wrapper">
                     <label class="theme-switch" for="theme-toggle">
                         <input type="checkbox" id="theme-toggle">
@@ -153,7 +153,7 @@
 
                     <div class="user-dropdown-options" onmouseleave="hideUserOptions()">
                         <button onclick="goToPersonal()">Dados Pessoais</button>
-                        <button>Filtros Salvos</button>
+                        <!-- <button>Filtros Salvos</button> -->
                         <div class="theme-switch-wrapper">
                             <label class="theme-switch" for="theme-toggle">
                                 <input type="checkbox" id="theme-toggle">
