--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -57,19 +57,19 @@
                         <div class="notification-container">
                             <span>27/02/2025 13:26</span>
                             <button>
-                                Acontecimento muito louco doido explodiu tudo
+                                Base de dados atualizada
                             </button>
                         </div>
                         <div class="notification-container">
                             <span>27/02/2025 13:26</span>
                             <button>
-                                Acontecimento muito louco doido explodiu tudo
+                                Base de dados atualizada
                             </button>
                         </div>
                         <div class="notification-container">
                             <span>27/02/2025 13:26</span>
                             <button>
-                                Acontecimento muito louco doido explodiu tudo
+                                Base de dados atualizada
                             </button>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
 
             <div class="user-dropdown-options">
                 <button onclick="goToPersonal()">Dados Pessoais</button>
-                <button>Filtros Salvos</button>
+                <!-- <button>Filtros Salvos</button> -->
                 <div class="theme-switch-wrapper">
                     <label class="theme-switch" for="theme-toggle">
                         <input type="checkbox" id="theme-toggle">
@@ -146,7 +146,7 @@
 
                     <div class="user-dropdown-options" onmouseleave="hideUserOptions()">
                         <button onclick="goToPersonal()">Dados Pessoais</button>
-                        <button>Filtros Salvos</button>
+                        <!-- <button>Filtros Salvos</button> -->
                         <div class="theme-switch-wrapper">
                             <label class="theme-switch" for="theme-toggle">
                                 <input type="checkbox" id="theme-toggle">
