--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -264,8 +264,20 @@
 
 
                 </div>
+
+
+
+
+
             </div>
+
+
+
+
         </div>
+
+
+
 
 
         <div class="kpis">
@@ -381,6 +393,16 @@
 
     </div>
 
+    <div class="filtro-personalizado-container" id="filtroPersonalizadoContainer">
+        <button class="filtro-personalizado-btn" onclick="toggleFiltroPersonalizado()">Filtros Salvos ⤴︎</button>
+        <div class="filtro-personalizado-lista" id="filtroPersonalizadoLista">
+            <ul id="listaFiltrosPersonalizados">
+                <li>Filtro Exemplo 1</li>
+                <li>Filtro Exemplo 2</li>
+            </ul>
+        </div>
+    </div>
+
 
 </body>
 
@@ -391,3 +413,5 @@
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
+<script src="./js/filtrosPersonalizados.js"></script>
+
