--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -49,31 +49,10 @@
                     <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png"
                         alt="Imagem de Notificações">
                 </div>
-                <a>
-                    Notificações
+                <a href="./verUsuario.html">
+                    Ver Usuário
                 </a>
-                <div class="notification-dropdown">
-                    <div class="notification-dropdown-options">
-                        <div class="notification-container">
-                            <span>27/02/2025 13:26</span>
-                            <button>
-                                Base de dados atualizada
-                            </button>
-                        </div>
-                        <div class="notification-container">
-                            <span>27/02/2025 13:26</span>
-                            <button>
-                                Base de dados atualizada
-                            </button>
-                        </div>
-                        <div class="notification-container">
-                            <span>27/02/2025 13:26</span>
-                            <button>
-                                Base de dados atualizada
-                            </button>
-                        </div>
-                    </div>
-                </div>
+               
             </div>
 
         </div>
