--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -390,7 +390,15 @@
 
     </div>
 
-
+  <div class="filtro-personalizado-container" id="filtroPersonalizadoContainer">
+        <button class="filtro-personalizado-btn" onclick="toggleFiltroPersonalizado()">Filtros Salvos ⤴︎</button>
+        <div class="filtro-personalizado-lista" id="filtroPersonalizadoLista">
+            <ul id="listaFiltrosPersonalizados">
+                <li>Filtro Exemplo 1</li>
+                <li>Filtro Exemplo 2</li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
@@ -400,3 +408,4 @@
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
+<script src="./js/salvarFiltros.js"></script>
