--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -394,8 +394,7 @@
         <button class="filtro-personalizado-btn" onclick="toggleFiltroPersonalizado()">Filtros Salvos ⤴︎</button>
         <div class="filtro-personalizado-lista" id="filtroPersonalizadoLista">
             <ul id="listaFiltrosPersonalizados">
-                <li>Filtro Exemplo 1</li>
-                <li>Filtro Exemplo 2</li>
+              
             </ul>
         </div>
     </div>
@@ -408,4 +407,4 @@
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
-<script src="./js/salvarFiltros.js"></script>
+<script src="./js/filtrosPersonalizados.js"></script>
